--- a/gb/19/7/18/n11393383.md
+++ b/gb/19/7/18/n11393383.md
@@ -1,62 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/cbzs/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/cbzs/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/cbzs/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Î÷°Ä½üº£·¢Éú6.6¼¶µØÕð ÓàÕð28Æð</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/07/1bc786e6033f8e1d8d66fdf4d523fb62.jpg" />
-<h6>14ÈÕÏÂÎç1µã39·Ö£¬6.6¼¶µØÕðÏ®»÷ÁËÎ÷°Ä²¼Â³Ä·£¨Broome£©ºÍºÚµÂÀ¼¸Û£¨Port Hedland£©Ö®¼ä£¬¾àÀëº£°¶200¹«ÀïµÄÇøÓò£»µØÕðºó£¬µ±µØÓÖ·¢ÉúÁË28ÆðÓàÕð¡££¨Geoscience AustraliaÍøÕ¾½ØÍ¼£©
-</h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oksoce3137/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/oksoce3137/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oksoce3137/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oksoce3137/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/oksoce3137/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/oksoce3137/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/oksoce3137/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>è¥¿æ¾³è¿‘æµ·å‘ç”Ÿ6.6çº§åœ°éœ‡ ä½™éœ‡28èµ·</h2>
+
+<h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê07ÔÂ18ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÌìî£¡¢ÕÅÐ¡·²°ÄÖÞçêË¹×ÛºÏ±¨µ¼£©7ÔÂ14ÈÕÏÂÎç£¬Î÷°Ä½üº£·¢ÉúÀïÊÏ6.6¼¶<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%e5%9c%b0%e9%9c%87.md">µØÕð</a>£¬ÕâÊÇÆù½ñÎªÖ¹µ±µØÕð¼¶×î¸ßµÄÒ»´ÎµØÕð£¬¸½½üº£°¶µØÇøÓÐÇ¿ÁÒ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%e9%9c%87%e6%84%9f.md">Õð¸Ð</a>£¬½¨ÖþÎïÓÐÇáÎ¢ËðÉË¡£ËæºóÓÖ·¢ÉúÁË28Æð<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%e9%a4%98%e9%9c%87.md">ÓàÕð</a>¡£×¨¼Ò±íÊ¾£¬ÕâÊÇºÜº±¼ûµÄµØÕðÊÂ¼þ¡£ËùÐÒ£¬µØÕðºÍÓàÕð¶¼Ã»ÓÐÒý·¢º£Ð¥¡£</p>
-<p>¾ÝµØÖÊ¿ÆÑ§¾Ö£¨Geoscience Australia£©ÏûÏ¢£¬14ÈÕÏÂÎç1µã39·Ö£¬6.6¼¶<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%e5%9c%b0%e9%9c%87.md">µØÕð</a>Ï®»÷ÁËÎ÷°Ä²¼Â³Ä·£¨Broome£©ºÍºÚµÂÀ¼¸Û£¨Port Hedland£©Ö®¼ä¾àÀëº£°¶200¹«ÀïµÄÇøÓò¡£µØÕðºó£¬µ±µØÓÖ·¢ÉúÁË28Æð<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%e9%a4%98%e9%9c%87.md">ÓàÕð</a>£¬µ¥ÖÜÒ»ÉÏÎç¾ÍÓÐ7Æð£¬ÆäÖÐÒ»ÆðÔÚ7µã×óÓÒ·¢Éú£¬ÓàÕðÕð¼¶¸ß´ï5.5¼¶¡£</p>
-<p>14ÈÕÏÂÎçµÄµØÕð·¢ÉúÊ±£¬½ð²®Àû£¨Kimberley£©¡¢Ô¶ÔÚ½ü2000¹«ÀïÖ®ÍâµÄçêË¹ÒÔ¼°±±ÁìµØÊ×¸®´ï¶ûÎÄµÄ¾ÓÃñ¾ùÓÐ<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%e9%9c%87%e6%84%9f.md">Õð¸Ð</a>£¬²¼Â³Ä·µØÇøÓÐ½¨ÖþÇáÎ¢ÊÜËð£¬µ«ÎÞÑÏÖØËðÊ§¡£µØÕð·¢ÉúÊ±£¬Ò»Ð©³¬ÊÐ»õ¼ÜÉÏµÄÉÌÆ·±»Õðµ½ÁËµØÉÏ¡£</p>
-<p>µ«Î´·¢ÏÖÉËÍöÊÂ¼þ¡£º£Ð¥¾¯±¨ÖÐÐÄÒÑ¾­ÅÅ³ýÁËº£Ð¥·çÏÕ¡£µØÕð¾ÖµØÕðÑ§¼Ò¿µÃ÷Ë¹£¨Phil Cummins£©¶Ô<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%e6%be%b3%e6%b4%b2.md">°ÄÖÞ</a>¹ã²¥¹«Ë¾Ëµ£º¡°Õâ·Ç³£º±¼û¡­¡­Äã¿ÉÄÜ»áÔÚÃ¿20Äê¼ûµ½Ò»´ÎÕâÑùµÄÊÂ¼þ¡£ºÜÄÑ½²ÕâÊÇ·ñÊÇÊ²Ã´´óÊÂÇé·¢ÉúµÄÇ°Õ×¡£¡±</p>
-<p>Ëû±íÊ¾£¬Õâ´ÎµØÕðºóÔ¤¼Æ»¹»áÓÐÐ¡¹æÄ£ÓàÕð¡£Ëæ×ÅÊ±¼äÍÆÒÆ£¬ÓàÕð³öÏÖµÄÆµÂÊ»áÔ½À´Ô½Ð¡£¬Õð¼¶Ò²»áÔ½À´Ô½Ð¡£¬µ«²»ÅÅ³ýÔÙ´Î·¢ÉúÑÏÖØµØÕðµÄ¿ÉÄÜÐÔ¡£¡°ÓàÕðµÄÕð¼¶¿ÉÄÜ¸ß´ï5.6¼¶£¬½ñÔç¾Í³öÏÖÁËÒ»´Î5.1¼¶µÄÓàÕð£¬¶ÔÓÚµØÕðºóµÄµäÐÍÓàÕðÏÖÏóÀ´Ëµ£¬ÕâÔÚÔ¤ÁÏÖ®ÖÐ¡£¡±</p>
-<p>¾Ó×¡ÔÚ²¼Â³Ä·±±²¿170¹«Àï´¦Ã·ÈüµÂË¹Íå£¨Mercedes Cove£©µÄ¾ÓÃñÇ®Äþ£¨David Channing£©¶Ô°ÄÖÞ¹ã²¥¹«Ë¾Ëµ£º¡°£¨14ÈÕµÄµØÕð£©Ò»¹²À´ÁËÈý²¨£¬·Ç³£Ç¿ÁÒ£¬¾ÍÏñ20ÄêÇ°ÎÒ¾­ÀúµÄÄÇ´Î¡£Í¦ÏÅÈËµÄ£¬ÎÝ×ÓÔÚÖ¨¸Â×÷Ïì£¬¾ÍÕâÃ´³ÖÐø×Å¡£¡±</p>
-<p>µØÕðÖ®ºó£¬Ç®ÄþµÄÉ©×Ó¸øËû´òÁËµç»°£¬µØÕð·¢ÉúÊ±ËýÕýÔÚ¹ºÎïÖÐÐÄ¡£¡°ËýËµ£¬¹ºÎïÖÐÐÄÃ¿¸öÈË¶¼ÅÜÁË¡£²£Á§ºÍËùÓÐ¶«Î÷¶¼ÔÚÕð¶¯£¬Ã¿¸öÈË¶¼ÔÚÅÜ¡£¡±</p>
-<h2>µØÕðÖÐ³öÉúµÄÓ¤¶ù</h2>
-<p>ÔÚÕâ³¡6.6¼¶µÄµØÕðÖÐ£¬Î»ÓÚ´óÉ³Ä®ÏÂ¾à½ñÒÑÓÐÎåÒÚÄêµÄÃûÎªCanning BasinµÄ¹ÅÀÏ¶Ï²ãÏßÊ×µ±Æä³å±»³å»÷¡£</p>
-<p>¿ÆÍ¢´óÑ§°£¶ûµÂË¹½ÌÊÚ£¨Chris Elders£©¾ÍµØÕð¹ý³Ì×öÁËÉîÈë·ÖÎö¡£¡°ÕâÐ©ÀÏ¾É¶Ï²ãÊÇÈõµã£¬µ±Ñ¹Á¦×ã¹»´óÊ±¾Í»á¶ÏÁÑ²¢²úÉú»¬ÒÆÏÖÏó£¬ÔÚÕâ¸ö¹ý³ÌÖÐÊÍ·ÅµÄÄÜÁ¿¾ÍÔì³ÉÁËµØÕð¡£¡±</p>
-<p>µØÕð²¨»áÏñÁ°äôÒ»ÑùÂûÑÓ£¬ÓàÕð»á²¨¼°µ½´ï¶ûÎÄÒÔ¼°°£Ë¹ÅåÀ¼Ë¹£¨Esperance£©£¬ÉõÖÁÓÐ±¨µ¼³ÆÏ¤Äá¶¼»áÓÐÕð¸Ð¡£</p>
-<p>°ÄÖÞµØÇò¿ÆÑ§ÖÐÐÄ£¨Geoscience Australia£©¸ß¼¶µØÕðÑ§¼ÒTanja Pejic±íÊ¾£¬Î÷°ÄºÜÐÒÔË£¬Ö÷´óÂ½²¢Î´ÊÜµ½Ó°Ïì¡£¡°ÎÒÃÇÊµ¼ÊÉÏºÜÐÒÔË£¬ÒòÎªÕâ´ÎµØÕðÊÇÔÚº£ÉÏ£¬¶ø²»ÊÇÈË¿ÚÃÜ¼¯µÄµØÇø£¬²»È»µÄ»°»áÔì³É¸ü´óÆÆ»µ¡£¡±</p>
-<p>¾ÍÔÚÎ»ÓÚKarrathaµÄË¹µÙ·Ò£¨Stephen?£©ºÍ°¢À³É¯£¨Alesha£©·ò¸¾±»µØÕð´øÀ´µÄÕð¶¯»·ÈÆÊ±£¬ËûÃÇÓ­À´ÁËÐÂÉúÅ®Ó¤°¬À­¡£¡°ÎÒÃÇÈ·ÐÅËý»á¼ÌÐøÕð¶¯ÎÒÃÇµÄÊÀ½ç£¬¡±Õâ¶ÔÐÂÊÖ¸¸Ä¸Ëµ¡£</p>
-<p>Î÷°Ä´ËÇ°×îÑÏÖØµÄµØÕð·¢ÉúÔÚ50¶àÄêÇ°£¬Õð¼¶Îª6.5¼¶¡£ËäÈ»Õâ´ÎµØÕðµÄ¼¶±ð´òÆÆÁË´ËÇ°¼ÍÂ¼£¬µ«Ôì³ÉµÄËðÊ§È´Ð¡µÃ¶à¡£</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´07æœˆ18æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¤©ç¿ã€å¼ å°å‡¡æ¾³æ´²ç€æ–¯ç»¼åˆæŠ¥å¯¼ï¼‰7æœˆ14æ—¥ä¸‹åˆï¼Œè¥¿æ¾³è¿‘æµ·å‘ç”Ÿé‡Œæ°6.6çº§<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%e5%9c%b0%e9%9c%87.md#1">åœ°éœ‡</a>ï¼Œè¿™æ˜¯è¿„ä»Šä¸ºæ­¢å½“åœ°éœ‡çº§æœ€é«˜çš„ä¸€æ¬¡åœ°éœ‡ï¼Œé™„è¿‘æµ·å²¸åœ°åŒºæœ‰å¼ºçƒˆ<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%e9%9c%87%e6%84%9f.md#1">éœ‡æ„Ÿ</a>ï¼Œå»ºç­‘ç‰©æœ‰è½»å¾®æŸä¼¤ã€‚éšåŽåˆå‘ç”Ÿäº†28èµ·<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%e9%a4%98%e9%9c%87.md#1">ä½™éœ‡</a>ã€‚ä¸“å®¶è¡¨ç¤ºï¼Œè¿™æ˜¯å¾ˆç½•è§çš„åœ°éœ‡äº‹ä»¶ã€‚æ‰€å¹¸ï¼Œåœ°éœ‡å’Œä½™éœ‡éƒ½æ²¡æœ‰å¼•å‘æµ·å•¸ã€‚</p>
+<p>æ®åœ°è´¨ç§‘å­¦å±€ï¼ˆGeoscience Australiaï¼‰æ¶ˆæ¯ï¼Œ14æ—¥ä¸‹åˆ1ç‚¹39åˆ†ï¼Œ6.6çº§<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%e5%9c%b0%e9%9c%87.md#1">åœ°éœ‡</a>è¢­å‡»äº†è¥¿æ¾³å¸ƒé²å§†ï¼ˆBroomeï¼‰å’Œé»‘å¾·å…°æ¸¯ï¼ˆPort Hedlandï¼‰ä¹‹é—´è·ç¦»æµ·å²¸200å…¬é‡Œçš„åŒºåŸŸã€‚åœ°éœ‡åŽï¼Œå½“åœ°åˆå‘ç”Ÿäº†28èµ·<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%e9%a4%98%e9%9c%87.md#1">ä½™éœ‡</a>ï¼Œå•å‘¨ä¸€ä¸Šåˆå°±æœ‰7èµ·ï¼Œå…¶ä¸­ä¸€èµ·åœ¨7ç‚¹å·¦å³å‘ç”Ÿï¼Œä½™éœ‡éœ‡çº§é«˜è¾¾5.5çº§ã€‚</p>
+<p>14æ—¥ä¸‹åˆçš„åœ°éœ‡å‘ç”Ÿæ—¶ï¼Œé‡‘ä¼¯åˆ©ï¼ˆKimberleyï¼‰ã€è¿œåœ¨è¿‘2000å…¬é‡Œä¹‹å¤–çš„ç€æ–¯ä»¥åŠåŒ—é¢†åœ°é¦–åºœè¾¾å°”æ–‡çš„å±…æ°‘å‡æœ‰<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%e9%9c%87%e6%84%9f.md#1">éœ‡æ„Ÿ</a>ï¼Œå¸ƒé²å§†åœ°åŒºæœ‰å»ºç­‘è½»å¾®å—æŸï¼Œä½†æ— ä¸¥é‡æŸå¤±ã€‚åœ°éœ‡å‘ç”Ÿæ—¶ï¼Œä¸€äº›è¶…å¸‚è´§æž¶ä¸Šçš„å•†å“è¢«éœ‡åˆ°äº†åœ°ä¸Šã€‚</p>
+<p>ä½†æœªå‘çŽ°ä¼¤äº¡äº‹ä»¶ã€‚æµ·å•¸è­¦æŠ¥ä¸­å¿ƒå·²ç»æŽ’é™¤äº†æµ·å•¸é£Žé™©ã€‚åœ°éœ‡å±€åœ°éœ‡å­¦å®¶åº·æ˜Žæ–¯ï¼ˆPhil Cumminsï¼‰å¯¹<ahref="https://github.com/oksoce3137/djy/blob/master/gb/tag/%e6%be%b3%e6%b4%b2.md#1">æ¾³æ´²</a>å¹¿æ’­å…¬å¸è¯´ï¼šâ€œè¿™éžå¸¸ç½•è§â€¦â€¦ä½ å¯èƒ½ä¼šåœ¨æ¯20å¹´è§åˆ°ä¸€æ¬¡è¿™æ ·çš„äº‹ä»¶ã€‚å¾ˆéš¾è®²è¿™æ˜¯å¦æ˜¯ä»€ä¹ˆå¤§äº‹æƒ…å‘ç”Ÿçš„å‰å…†ã€‚â€</p>
+<p>ä»–è¡¨ç¤ºï¼Œè¿™æ¬¡åœ°éœ‡åŽé¢„è®¡è¿˜ä¼šæœ‰å°è§„æ¨¡ä½™éœ‡ã€‚éšç€æ—¶é—´æŽ¨ç§»ï¼Œä½™éœ‡å‡ºçŽ°çš„é¢‘çŽ‡ä¼šè¶Šæ¥è¶Šå°ï¼Œéœ‡çº§ä¹Ÿä¼šè¶Šæ¥è¶Šå°ï¼Œä½†ä¸æŽ’é™¤å†æ¬¡å‘ç”Ÿä¸¥é‡åœ°éœ‡çš„å¯èƒ½æ€§ã€‚â€œä½™éœ‡çš„éœ‡çº§å¯èƒ½é«˜è¾¾5.6çº§ï¼Œä»Šæ—©å°±å‡ºçŽ°äº†ä¸€æ¬¡5.1çº§çš„ä½™éœ‡ï¼Œå¯¹äºŽåœ°éœ‡åŽçš„å…¸åž‹ä½™éœ‡çŽ°è±¡æ¥è¯´ï¼Œè¿™åœ¨é¢„æ–™ä¹‹ä¸­ã€‚â€</p>
+<p>å±…ä½åœ¨å¸ƒé²å§†åŒ—éƒ¨170å…¬é‡Œå¤„æ¢…èµ›å¾·æ–¯æ¹¾ï¼ˆMercedes Coveï¼‰çš„å±…æ°‘é’±å®ï¼ˆDavid Channingï¼‰å¯¹æ¾³æ´²å¹¿æ’­å…¬å¸è¯´ï¼šâ€œï¼ˆ14æ—¥çš„åœ°éœ‡ï¼‰ä¸€å…±æ¥äº†ä¸‰æ³¢ï¼Œéžå¸¸å¼ºçƒˆï¼Œå°±åƒ20å¹´å‰æˆ‘ç»åŽ†çš„é‚£æ¬¡ã€‚æŒºå“äººçš„ï¼Œå±‹å­åœ¨å±å˜Žä½œå“ï¼Œå°±è¿™ä¹ˆæŒç»­ç€ã€‚â€</p>
+<p>åœ°éœ‡ä¹‹åŽï¼Œé’±å®çš„å«‚å­ç»™ä»–æ‰“äº†ç”µè¯ï¼Œåœ°éœ‡å‘ç”Ÿæ—¶å¥¹æ­£åœ¨è´­ç‰©ä¸­å¿ƒã€‚â€œå¥¹è¯´ï¼Œè´­ç‰©ä¸­å¿ƒæ¯ä¸ªäººéƒ½è·‘äº†ã€‚çŽ»ç’ƒå’Œæ‰€æœ‰ä¸œè¥¿éƒ½åœ¨éœ‡åŠ¨ï¼Œæ¯ä¸ªäººéƒ½åœ¨è·‘ã€‚â€</p>
+<h2>åœ°éœ‡ä¸­å‡ºç”Ÿçš„å©´å„¿</h2>
+<p>åœ¨è¿™åœº6.6çº§çš„åœ°éœ‡ä¸­ï¼Œä½äºŽå¤§æ²™æ¼ ä¸‹è·ä»Šå·²æœ‰äº”äº¿å¹´çš„åä¸ºCanning Basinçš„å¤è€æ–­å±‚çº¿é¦–å½“å…¶å†²è¢«å†²å‡»ã€‚</p>
+<p>ç§‘å»·å¤§å­¦åŸƒå°”å¾·æ–¯æ•™æŽˆï¼ˆChris Eldersï¼‰å°±åœ°éœ‡è¿‡ç¨‹åšäº†æ·±å…¥åˆ†æžã€‚â€œè¿™äº›è€æ—§æ–­å±‚æ˜¯å¼±ç‚¹ï¼Œå½“åŽ‹åŠ›è¶³å¤Ÿå¤§æ—¶å°±ä¼šæ–­è£‚å¹¶äº§ç”Ÿæ»‘ç§»çŽ°è±¡ï¼Œåœ¨è¿™ä¸ªè¿‡ç¨‹ä¸­é‡Šæ”¾çš„èƒ½é‡å°±é€ æˆäº†åœ°éœ‡ã€‚â€</p>
+<p>åœ°éœ‡æ³¢ä¼šåƒæ¶Ÿæ¼ªä¸€æ ·è”“å»¶ï¼Œä½™éœ‡ä¼šæ³¢åŠåˆ°è¾¾å°”æ–‡ä»¥åŠåŸƒæ–¯ä½©å…°æ–¯ï¼ˆEsperanceï¼‰ï¼Œç”šè‡³æœ‰æŠ¥å¯¼ç§°æ‚‰å°¼éƒ½ä¼šæœ‰éœ‡æ„Ÿã€‚</p>
+<p>æ¾³æ´²åœ°çƒç§‘å­¦ä¸­å¿ƒï¼ˆGeoscience Australiaï¼‰é«˜çº§åœ°éœ‡å­¦å®¶Tanja Pejicè¡¨ç¤ºï¼Œè¥¿æ¾³å¾ˆå¹¸è¿ï¼Œä¸»å¤§é™†å¹¶æœªå—åˆ°å½±å“ã€‚â€œæˆ‘ä»¬å®žé™…ä¸Šå¾ˆå¹¸è¿ï¼Œå› ä¸ºè¿™æ¬¡åœ°éœ‡æ˜¯åœ¨æµ·ä¸Šï¼Œè€Œä¸æ˜¯äººå£å¯†é›†çš„åœ°åŒºï¼Œä¸ç„¶çš„è¯ä¼šé€ æˆæ›´å¤§ç ´åã€‚â€</p>
+<p>å°±åœ¨ä½äºŽKarrathaçš„æ–¯è’‚èŠ¬ï¼ˆStephen?ï¼‰å’Œé˜¿èŽ±èŽŽï¼ˆAleshaï¼‰å¤«å¦‡è¢«åœ°éœ‡å¸¦æ¥çš„éœ‡åŠ¨çŽ¯ç»•æ—¶ï¼Œä»–ä»¬è¿Žæ¥äº†æ–°ç”Ÿå¥³å©´è‰¾æ‹‰ã€‚â€œæˆ‘ä»¬ç¡®ä¿¡å¥¹ä¼šç»§ç»­éœ‡åŠ¨æˆ‘ä»¬çš„ä¸–ç•Œï¼Œâ€è¿™å¯¹æ–°æ‰‹çˆ¶æ¯è¯´ã€‚</p>
+<p>è¥¿æ¾³æ­¤å‰æœ€ä¸¥é‡çš„åœ°éœ‡å‘ç”Ÿåœ¨50å¤šå¹´å‰ï¼Œéœ‡çº§ä¸º6.5çº§ã€‚è™½ç„¶è¿™æ¬¡åœ°éœ‡çš„çº§åˆ«æ‰“ç ´äº†æ­¤å‰çºªå½•ï¼Œä½†é€ æˆçš„æŸå¤±å´å°å¾—å¤šã€‚</p>
 <p>&nbsp;</p>
-<p>ÔðÈÎ±à¼­£º¸ßÃô</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šé«˜æ•</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/7/18/n11393383.htm">Î÷°Ä½üº£·¢Éú6.6¼¶µØÕð ÓàÕð28Æð</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/18/11/9/n10840032.htm">çêË¹Î÷ÄÏ·¢Éú5.4¼¶µØÕð Á½ÔÂÀ´µÚ¶þ´Î</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/9/26/n10741985.htm">Î÷°ÄÎªºÎ·¢Éú´óµØÕð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/8/9/n10626072.htm">°Ä´óÀûÑÇÎ÷°ÄÄÏ°ÄÖÜÈýÍí·¢ÉúÇáÎ¢¼¶µØÕð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/7/31/n8153616.htm">Î÷°ÄÐ¡ÕòNorseman³É°ÄÖÞ×î¡°»Î¡±Õò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/7/9/n8082610.htm">Î÷°ÄÄÏ²¿·¢Éú5.5¼¶µØÕð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/5/29/n7942367.htm">Î÷°Ä½ð¿ó-Ë¹ÅåÀ¼Ë¹µØÇø·¢ÉúµØÕð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/14/2/26/n4092842.htm">Î÷°Ä½ð¿óÇø·¢Éú4.6¼¶µØÕð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/12/11/21/n3735404.htm">Î÷°ÄÓÐÁ½´¦µØÕð¸ß·¢´ø ÁÙ½üçêË¹</a></li>
-> <li><a href="https://github.com/cbzs/djy/blob/master/gb/12/11/21/n3735404.md">Î÷°ÄÓÐÁ½´¦µØÕð¸ß·¢´ø ÁÙ½üçêË¹</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11389486.htm">Ò»ÎÄ¿´¶®Õã½­9ËêÅ®Í¯ÕÂ×ÓÐÀÓöº¦ÊÂ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11390794.htm">MH370ÐÂÏßË÷£º¶à³ö200°õÉñÃØ¸ºÔØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11390697.htm">ÇàµºÄÐ×ÓÔÚÅ©ÉÌÐÐ´æ500ÍòÃÀ½ð ²»Òí¶ø·É</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11390813.htm">É½¶«´óÑ§Å®Ñ§°éÆØÄÚÄ» Ð£·½Íþ±ÆÀûÓÕÅ®Éú¾Í·¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/9/n11373378.htm">¡¾ÃüÀíÆª¡¿°Ë×Ö¿´»éÒö ÄÐÅ®²îÁùËê½á»é²»ºÃÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11353774.htm">¡¾¶¨ÊýÆª¡¿ÌýÈËÉùÒô Ò²ÄÜÖªµÀËûµÄÃüÔË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/22/n11132616.htm">¡¾Õ÷ÎÄ¡¿Ò½Ê¥ÕÅÖÙ¾°ÁôÏÂÁËÒ©·½ºÍ¾¯ÊÀÃûÑÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/11/n11378638.htm">ÏÔÎ¢¾µÏÂµÄÑÛÀá Ã¿¿Å¶¼ÊÇ¶ÀÌØµÄÐÄÇé¹ÊÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11387659.htm">ÖÐ¹²Íâ½»¹ÙÍÆÌØÉÏÂîÃÀ¹ú Ôâ·´»÷ºóÉ¾ÎÄ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11388856.htm">ºì¶þ´ú£ºÖÐ¹²ÊýÊ®Ãû½«ÁìÔâ½µ¼¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11388640.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖÐ¹ú¾­¼Ã·Å»º ³ýÃ³Õ½»¹ÓÐ¸ü´óÔ­Òò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/10/n11376378.htm">¡¾ÐÂÎÅ¿´µã¡¿¸ÛÌ¨³É·´¹²Ç°Ïß ÃÀ´ó¶¯×÷ÇÃ±±¾©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11388640.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖÐ¹ú¾­¼Ã·Å»º ³ýÃ³Õ½»¹ÓÐ¸ü´óÔ­Òò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11388701.htm">¡¾ÐÂÎÅ¿´µã¡¿¸Û¾¯ÊÜ8¿½ÎÊ Ë­ÄðÁ÷Ñª³åÍ»£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11389084.htm">¹ùÃÀÃÀ³öÓüºó½üÕÕÆØ¹â VÁ³±äUÁ³ÒýÈÈÒé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/16/n11388573.htm">¿¹°©³É¹¦ºóÇ©×Ö½á»é ÁÖÁ¢Ñó£ºÓÐµã²»¸ÒÏàÐÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/15/n11386300.htm">´óÂ½ËÄÆ¬Ó³Ç°Ôâ³·µµ ÍøÓÑ£º±ø»ÄÂíÂÒµÄÊîÆÚµµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/15/n11386484.htm">º¼ÖÝ9ËêÅ®Í¯Ôâ²»²â °Ù¶È¼ÙÃ°ÕËºÅ·¢ÎÄÈÇÖÚÅ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/17/n11390041.htm">É½±¾²ÊÓëIZ*ONEÏà¼û»¶ Îª¾ÃÎ¥ÔÙ¼û†DÁ¼¸Ð¿®</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/12/11/21/n3735404.md#1">è¥¿æ¾³æœ‰ä¸¤å¤„åœ°éœ‡é«˜å‘å¸¦ ä¸´è¿‘ç€æ–¯</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/14/2/26/n4092842.md#1">è¥¿æ¾³é‡‘çŸ¿åŒºå‘ç”Ÿ4.6çº§åœ°éœ‡</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/16/5/29/n7942367.md#1">è¥¿æ¾³é‡‘çŸ¿-æ–¯ä½©å…°æ–¯åœ°åŒºå‘ç”Ÿåœ°éœ‡</a></li>
+<li><a href="https://github.com/oksoce3137/djy/blob/master/gb/16/7/9/n8082610.md#1">è¥¿æ¾³å—éƒ¨å‘ç”Ÿ5.5çº§åœ°éœ‡</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/cbzs/djy/blob/master/gb/19/7/18/n11393383.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/cbzs/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/cbzs/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">çŽ‰æ¸…å¿ƒï¼šç‰©ç†å¤§å¸ˆæŸæ˜ŸåŒ— ä¸€æ›²æ‚²æ€†çš„æŒ½æ­Œ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10993844.md#1" target="_blank">é˜…è¯»ã€Šè½¬æ³•è½®ã€‹ å¤§æ´‹æ´²æ³•è½®åŠŸå­¦å‘˜è°ˆæ„Ÿæ‚Ÿ</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/16/n11943195.md#1">æ—¥åª’ä½“äººè¯„å°æ¹¾é˜²ç–«2å¤§åŠŸè‡£ ç¬¬ä¸€åç«Ÿéžé™ˆæ—¶ä¸­</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/16/n11945071.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å®˜åª’å¿™é™æ¸©ï¼Ÿèµµç«‹åšåŠäº”æ¯›è¢«æ‰“è„¸</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11946346.md#1">ã€çŽ°åœºè§†é¢‘ã€‘å¬ä¿¡ä¸­å…±è°Žè¨€ è¿”äº¬äººæŒ¤çˆ†æœºåœº</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11945722.md#1">ã€ç¿»å¢™å¿…çœ‹ã€‘å®˜åª’åå¸¸ æ‰¹èµµç«‹åšâ€œä¸‹ä½œâ€ï¼Ÿ</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11948259.md#1">ä¸­å…±æ’¤é©»åŽç¾Žåª’è®°è€…å·¥ä½œè¯ è“¬ä½©å¥¥å¼ºçƒˆå›žåº”</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11946544.md#1">å°æ­Œä»”æˆå›½å®å°å‡¤ä»™ç—…é€ äº«å¯¿80å²ã€€</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11947993.md#1">ä¼Šæœ—éšçž’ç–«æƒ… æ¥è‡ªä¼Šæœ—çš„å°æ¹¾å¥³å©¿çˆ†çœŸç›¸</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹ä¸­å…±ç—…æ¯’</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/11/n11933369.md#1">æ¸…æœå­¦å£«ä¸‰å¥‡æ¢¦ æ˜¯è°æŽŒæ¡ä»–çš„ä¸€ç”Ÿï¼Ÿ</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/11/n11933376.md#1">åƒ§äººç²¾å‡†é¢„è¨€ ç…çŠä¸‰å­©ç«¥ç«Ÿæ˜¯â€œçœŸä¸€å“â€</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/13/1/31/n3790016.md#1">ç±³å¼€æœ—åŸºç½—Michelangeloï¼ˆ1ï¼‰æ—©å¹´ç”Ÿæ¶¯</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/17/n11946008.md#1">åäººçº·ç¡®è¯Š ã€ŠæƒåŠ›æ¸¸æˆã€‹ã€Šå¤ä»‡è€…ã€‹æ¼”å‘˜æŸ“ç–«</a></li>
+<li><a href="https://github.com/bpivcn3396/djy/blob/master/gb/20/3/12/n11936269.md#1">ç¼˜è‡ªå¤©ä¸Šæ¥ è¿™å¯¹å¤«å¦»æ˜¯æ˜Ÿå®˜ä¸‹å‡¡</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/oksoce3137/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/oksoce3137/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/7/18/n11393383.htm">è¥¿æ¾³è¿‘æµ·å‘ç”Ÿ6.6çº§åœ°éœ‡ ä½™éœ‡28èµ·</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oksoce3137/djy/blob/master/gb/19/7/18/n11393383.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/oksoce3137/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/oksoce3137/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/oksoce3137/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/oksoce3137/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oksoce3137/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
